<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/buttonComparar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.135"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.901" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/Text1"
        android:layout_width="324dp"
        android:layout_height="156dp"
        android:layout_marginBottom="108dp"
        android:text=""
        app:layout_constraintBottom_toTopOf="@+id/buttonComparar"
        tools:layout_editor_absoluteX="45dp" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/text22"
        android:layout_width="320dp"
        android:layout_height="151dp"
        android:text=""
        app:layout_constraintBottom_toTopOf="@+id/Text1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.833" />

    <TextView
        android:id="@+id/textViewResult"
        android:layout_width="203dp"
        android:layout_height="93dp"
        android:text="TextView"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.778"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Text1"
        app:layout_constraintVertical_bias="0.504" />


</androidx.constraintlayout.widget.ConstraintLayout>